# codefactory

./: .gitignore  .impeccable.md  AGENTS.md  CONTRIBUTING.md  LOCAL_API.md  README.md  package-lock.json  package.json  tailwind.config.ts  test.md
.github/workflows/: ci.yml  claude-code-review.yml  codex-code-review.yml  (+3 more)
client/: index.html
docs/: index.html  native-app-framework-evaluation.md  tailwind.config.cjs
script/: build-public-docs.ts  build.ts
server/: activityPayload.ts  agentRunner.test.ts  agentRunner.ts  appBranding.test.ts  appRuntime.test.ts  appRuntime.ts  appUpdate.test.ts  appUpdate.ts  babysitter.test.ts  babysitter.ts  backgroundJobDispatcher.test.ts  backgroundJobDispatcher.ts  backgroundJobHandlers.test.ts  backgroundJobHandlers.ts  backgroundJobQueue.ts  ciFailureClassifier.test.ts  ciFailureClassifier.ts  ciHealingAgent.test.ts  ciHealingAgent.ts  ciHealingManager.test.ts  ciHealingManager.ts  cli.test.ts  cli.ts  defaultConfig.test.ts  defaultConfig.ts  deploymentAdapters.test.ts  deploymentAdapters.ts  deploymentHealingAgent.test.ts  deploymentHealingAgent.ts  github.test.ts  github.ts  index.ts  localOnly.ts  log-files.test.ts  logFiles.ts  logger.test.ts  logger.ts  markdown.test.ts  markdown.ts  mcp.ts  (+23 more)
shared/: models.ts  schema.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tasks/: drain-mode-log-fix-baseline-2026-05-05.md  lessons.md  recent-log-failure-report-2026-04-28.md  recent-log-failure-report-2026-05-02.md
(+68 files in other folders)
